--- a/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/busqueda/resultado/resultado.component.html
@@ -5,38 +5,38 @@
       <!-- Campos del alumno -->
       <div class="row mb-3" *ngIf="alumno"> <!-- Asegúrate de que alumno no sea null -->
         <div class="col-md-6">
-          <label for="nombre" class="form-label text-white">Nombre</label>
-          <input type="text" id="nombre" [value]="alumno.nombre" readonly class="form-control mt-2">
+          <label for="nombre" class="form-label text-white mb-0">Nombre</label>
+          <input type="text" id="nombre" [value]="alumno.nombre" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
-          <label for="apellido" class="form-label text-white">Apellido</label>
-          <input type="text" id="apellido" [value]="alumno.apellido" readonly class="form-control mt-2">
+          <label for="apellido" class="form-label text-white mb-0">Apellido</label>
+          <input type="text" id="apellido" [value]="alumno.apellido" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
-          <label for="direccion" class="form-label text-white">Direccion</label>
-          <input type="text" id="direccion" [value]="alumno.direccion" readonly class="form-control mt-2">
+          <label for="direccion" class="form-label text-white mb-0">Direccion</label>
+          <input type="text" id="direccion" [value]="alumno.direccion" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
-          <label for="fechaN" class="form-label text-white">Fecha de Nacimiento</label>
-          <input type="text" id="fechaN" [value]="alumno.fechaN" readonly class="form-control mt-2">
+          <label for="fechaN" class="form-label text-white mb-0">Fecha de Nacimiento</label>
+          <input type="text" id="fechaN" [value]="alumno.fechaN" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
-          <label for="legajo" class="form-label text-white">Legajo</label>
-          <input type="text" id="legajo" [value]="alumno.legajo" readonly class="form-control mt-2">
+          <label for="legajo" class="form-label text-white mb-0">Legajo</label>
+          <input type="text" id="legajo" [value]="alumno.legajo" readonly class="form-control mt-0 mb-3">
         </div>
 
         <div class="col-md-6">
-          <label for="mail" class="form-label text-white">Mail</label>
-          <input type="text" id="mail" [value]="alumno.mail" readonly class="form-control mt-2">
+          <label for="mail" class="form-label text-white mb-0">Mail</label>
+          <input type="text" id="mail" [value]="alumno.mail" readonly class="form-control mt-0 mb-3">
         </div>
 
-        <div class="col-md-6">
-          <label for="plan" class="form-label text-white">Plan</label>
-          <input type="text" id="plan" [value]="alumno.plan" readonly class="form-control mt-2">
+        <div class="col-md-6 align-items-center">
+          <label for="plan" class="form-label text-white mb-0">Plan</label>
+          <input type="text" id="plan" [value]="alumno.plan" readonly class="form-control mt-0 mb-3">
         </div>
         
       </div>
