--- a/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
+++ b/FrontEnd/SysAcad/src/app/components/Alum/alumnos/alumnos.component.html
@@ -1,11 +1,26 @@
 <div class="container">
-
   <div class="card text-white bg-primary mb-3 mt-3">
     <div class="d-flex justify-content-between align-items-center card-header">
       <h4 class="m-3">Listado de Alumnos</h4>
-      <button type="button" class="btn btn-light btn-sm m-2" onclick="location.href='http://localhost:4200/add_alumno'">Agregar Alumno</button>
+      <button
+        type="button"
+        class="btn btn-light btn-sm m-2"
+        onclick="location.href='http://localhost:4200/add_alumno'">
+        Agregar Alumno
+      </button>
     </div>
-    
+
+    <!-- Filtro por plan usando formControlName -->
+    <form [formGroup]="filtroForm" class="d-flex justify-content-center align-items-center mt-2 mb-2">
+      <label for="plan" class="form-label mr-2">Plan:</label>
+      <select formControlName="plan" id="plan" class="form-select w-auto">
+        <option value="">Todos</option>
+        <option *ngFor="let plan of planesDisponibles" [value]="plan">
+          {{ plan }}
+        </option>
+      </select>
+    </form>
+
     <div class="table-responsive">
       <table class="table table-secondary text-center mt-3 mb-3">
         <thead>
@@ -21,22 +36,31 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let alumno of listaAlumnos" class="table-active">
-            <th scope="row" class="text-center align-middle">{{alumno.legajo}}</th>
-            <td class="text-center align-middle">{{alumno.nombre}}</td>
-            <td class="text-center align-middle">{{alumno.apellido}}</td>
-            <td class="text-center align-middle">{{alumno.plan}}</td>
-            <td class="text-center align-middle">{{alumno.mail}}</td>
-            <td class="text-center align-middle">{{alumno.direccion}}</td>
-            <td class="text-center align-middle">{{alumno.fechaN}}</td>
+          <tr *ngFor="let alumno of alumnosFiltrados" class="table-active">
+            <th scope="row" class="text-center align-middle">{{ alumno.legajo }}</th>
+            <td class="text-center align-middle">{{ alumno.nombre }}</td>
+            <td class="text-center align-middle">{{ alumno.apellido }}</td>
+            <td class="text-center align-middle">{{ alumno.plan }}</td>
+            <td class="text-center align-middle">{{ alumno.mail }}</td>
+            <td class="text-center align-middle">{{ alumno.direccion }}</td>
+            <td class="text-center align-middle">{{ alumno.fechaN | date: 'yyyy-MM-dd' }}</td>
             <td class="text-center align-middle">
-              <button routerLink="/editar_alumno/{{ alumno.id }}" type="button" class="btn btn-primary btn-sm m-1">Editar</button>
-              <button (click)="deleteAlumno(alumno.id!)" type="button" class="btn btn-danger btn-sm m-1">Eliminar</button>
+              <button
+                routerLink="/editar_alumno/{{ alumno.id }}"
+                type="button"
+                class="btn btn-primary btn-sm m-1">
+                Editar
+              </button>
+              <button
+                (click)="deleteAlumno(alumno.id!)"
+                type="button"
+                class="btn btn-danger btn-sm m-1">
+                Eliminar
+              </button>
             </td>
           </tr>
-        </tbody> 
+        </tbody>
       </table>
-    </div> 
+    </div>
   </div>
-
 </div>
