--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,19 @@
     <div class="collapse navbar-collapse text-center " id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item" *ngIf="isAdmin">
-        <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
-        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
-        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAdmins()">Administradores</button>
-        <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAdmins()">Administradores</button>
+          <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
         </li>
       </ul>
+      <!-- Div para mostrar la información del usuario -->
+      <div class="d-flex align-items-center text-white">
+        <div class="me-3">
+          <span>{{ nombre }} {{ apellido }} ({{ usuario }})</span>
+        </div>
+        <button class="btn btn-danger btn-sm" (click)="logout()">Cerrar Sesión</button>
+      </div>
     </div>
   </div>
-
 </nav>
