--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,21 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
+    <!-- Logo -->
     <a class="navbar-brand me-4" (click)="goHome()">
       <img src="web_6872807(1).png" alt="Logo" style="width:60px;">
     </a>
-    <div class="mt-3 justify-content-center text-center"> 
-    </div>
-    <button class="btn btn-light rounded-3 me-2 mb-2 mb-lg-0 ml-2 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+
+    <!-- Botón hamburguesa para móvil -->
+    <button class="btn btn-light rounded-3 me-2 mb-2 mb-lg-0 ml-2 d-lg-none" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
+      aria-label="Toggle navigation">
       <span>Menu</span>
     </button>
-    <div class="collapse navbar-collapse text-center " id="navbarColor01">
+
+    <!-- Menú colapsable -->
+    <div class="collapse navbar-collapse text-center" id="navbarColor01">
       <ul class="navbar-nav me-auto">
+        <!-- Opciones para admin -->
         <li class="nav-item" *ngIf="isAdmin">
           <button type="button" class="btn btn-primary bg-secondary rounded-3 me-2 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
           <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
@@ -17,11 +23,17 @@
           <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
         </li>
       </ul>
-      <!-- Div para mostrar la información del usuario -->
-      <div class="d-flex align-items-center text-white">
-        <div class="me-3">
-          <span>{{ nombre }} {{ apellido }} ({{ usuario }})</span>
+
+      <!-- Info del usuario -->
+      <div class="d-flex align-items-center gap-3 text-white">
+        <div class="text-end">
+          <div class="fw-bold">Nombre: {{ nombre }}</div>
+          <div class="fw-bold">Apellido: {{ apellido }}</div>
+          <div class="fw-bold text-uppercase">{{ rol }}</div>
         </div>
+        <!-- Avatar opcional -->
+        <img src="userSYSACAD.png" alt="Avatar" width="50" height="50" />
+        <!-- Botón cerrar sesión -->
         <button class="btn btn-danger btn-sm" (click)="logout()">Cerrar Sesión</button>
       </div>
     </div>
